Going to try fixing scrollbars messing with the layout.

--- a/style.scss
+++ b/style.scss
@@ -15,6 +15,8 @@
 
 html {
   font-size: 100%;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 body {
